# OptimisticVM

./: Cargo.toml  LICENSE  README.md  spec.md
benches/: ovp_bench.rs
examples/clicker-game/: README.md
examples/clicker-game/public/: game.js  index.html
examples/clicker-game/server/: package.json  server.js
examples/clicker-game/wasm-verifier/: Cargo.toml
examples/clicker-game/wasm-verifier/src/: lib.rs
src/: bisection.rs  chain.rs  commitment.rs  error.rs  fraud.rs  hash.rs  lib.rs  merkle.rs  snitch.rs  transition.rs  types.rs  zk.rs
tests/: full_protocol.rs
