[package]
name = "ovp"
version = "0.1.0"
edition = "2021"
description = "Optimistic Verification Protocol — full verification implementation"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ovp_bench"
harness = false
