[package]
name = "clicker-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ovp = { path = "../../.." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = "s"
